deployments/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-app
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://auth.jolszak.test"
spec:
  rules:
  - host: jolszak.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-app
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: kraken
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://jolszak.test"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
    - hosts:
        - auth.jolszak.test
  rules:
    - host: auth.jolszak.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-app
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://auth.jolszak.test"
spec:
  rules:
  - host: admin.jolszak.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-app
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: kraken
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: monitoring
spec:
  rules:
  - host: monitoring.jolszak.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: promstack-grafana
            port:
              number: 3000
